refactor(ProductService): toList()로 변경